* TVRageClient uses the xml feeds now * some testcases